--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -146,9 +146,9 @@ en-GB:
     select:
       prompt: Please select
     submit:
-      create: Create %{model}
-      submit: Save %{model}
-      update: Update %{model}
+      create: Create
+      submit: Save
+      update: Save
   number:
     currency:
       format:
