--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 en:
   :true: "Yes"
   :false: "No"
+
   enums:
     provider:
       gp: GP
@@ -11,6 +12,12 @@ en:
     label:
       patient:
         paediatric_patient_indicator: "If under 18 years, is the recipient being treated in a paediatric unit?"
+    select:
+      prompt: Please select
+    submit:
+      create: Create
+      submit: Save
+      update: Save
 
   activerecord:
     attributes:
@@ -49,9 +56,38 @@ en:
         volume: "PD bag volume (ml)"
         days: PD bag
 
-  renalware:
-    esrf:
-      update:
-        success: Successfully updated.
-      form:
-        prd_prompt: Please select primary renal diagnosis
+  errors:
+    format: "%{attribute} %{message}"
+    messages:
+      accepted: must be accepted
+      blank: can't be blank
+      confirmation: doesn't match %{attribute}
+      empty: can't be empty
+      equal_to: must be equal to %{count}
+      even: must be even
+      exclusion: is reserved
+      greater_than: must be greater than %{count}
+      greater_than_or_equal_to: must be greater than or equal to %{count}
+      inclusion: is not included in the list
+      invalid: is invalid
+      less_than: must be less than %{count}
+      less_than_or_equal_to: must be less than or equal to %{count}
+      not_a_number: is not a number
+      not_an_integer: must be an integer
+      odd: must be odd
+      record_invalid: 'Validation failed: %{errors}'
+      taken: has already been taken
+      too_long:
+        one: is too long (maximum is 1 character)
+        other: is too long (maximum is %{count} characters)
+      too_short:
+        one: is too short (minimum is 1 character)
+        other: is too short (minimum is %{count} characters)
+      wrong_length:
+        one: is the wrong length (should be 1 character)
+        other: is the wrong length (should be %{count} characters)
+    template:
+      body: 'There were problems with the following fields:'
+      header:
+        one: 1 error prohibited this %{model} from being saved
+        other: "%{count} errors prohibited this %{model} from being saved"
