--- a/config/locales/renalware/accesses/assessment.yml
+++ b/config/locales/renalware/accesses/assessment.yml
@@ -1,34 +1,41 @@
 en:
   activerecord:
-    renalware/accesses/assessment:
-      performed_on: Performed On
-      procedure_on: Procedure Date
-      failed_on: Failure Date
-      type: Access Type
-      side: Access Side
-      site: Access Site
-      comments: Comments
+    attributes:
+      renalware/accesses/assessment:
+        performed_on: Performed On
+        procedure_on: Procedure Date
+        failed_on: Failure Date
+        type: Access Type
+        side: Access Side
+        site: Access Site
+        comments: Comments
 
   activemodel:
-    renalware/accesses/assessment_document/test:
-      method: Method
-      flow_feed_artery: Flow Feed Artery
-      has_art_stenosis:  Artery Stenosis?
-      art_stenosis_notes: Artery Stenosis Notes
-      has_ven_stenosis: Venous Stenosis?
-      ven_stenosis_notes: Venous Stenosis Notes
-      has_residual_stenosis: Residual Stenosis?
-    renalware/accesses/assessment_document/test:
-      next_surveillance_due: Next Surveillance Due
-      rx_decision: Rx Decision
+    attributes:
+      renalware/accesses/assessment_document/test:
+        method: Method
+        flow_feed_artery: Flow Feed Artery
+        has_art_stenosis: "Artery Stenosis?"
+        art_stenosis_notes: Artery Stenosis Notes
+        has_ven_stenosis: "Venous Stenosis?"
+        ven_stenosis_notes: Venous Stenosis Notes
+        has_residual_stenosis: "Residual Stenosis?"
+      renalware/accesses/assessment_document/admin:
+        next_surveillance_due: Next Surveillance Due
+        rx_decision: Rx Decision
 
   enumerize:
-    renalware/accesses/assessment:
+    renalware/accesses/assessment_document/test:
       method:
         hand_doppler: Hand Doppler - Access Nurse
         vascular_technician_doppler: Vascular Technician Doppler
         vascular_laboratory: Vascular Laboratory
-      next_surveillance:
+      outcome:
+        green: Green (Fine)
+        amber: Amber (Some anxiety)
+        red: Red (Severe)
+    renalware/accesses/assessment_document/admin:
+      next_surveillance_due:
         routine_6_monthly: Routine 6 Monthly
         routine_3_monthly: Routine 3 Monthly
         routine_monthly: Routine Monthly
