--- a/config/locales/renalware/accesses/procedure.yml
+++ b/config/locales/renalware/accesses/procedure.yml
@@ -2,7 +2,7 @@ en:
   activerecord:
     attributes:
       renalware/accesses/procedure:
-        performed_on: Performed On
+        performed_on: Performed
         first_used_on: First Use Date
         failed_on: Failure Date
         performed_by: Performed By
