Add custom presentation to `Other` option in form dropdown list

--- a/config/locales/renalware/medications/route.yml
+++ b/config/locales/renalware/medications/route.yml
@@ -3,4 +3,4 @@ en:
     routes:
       form:
         prompt:
-          other: "Other (Please specify in notes)"
+          other: "Other (Please specify in Route Description below)"
