Extract I18n labels and prompts

--- a/config/locales/renalware/medications/medication.yml
+++ b/config/locales/renalware/medications/medication.yml
@@ -1,10 +1,15 @@
 en:
   simple_form:
+    labels:
+      medication:
+        medication_route: Route
     hints:
       medication:
         route_description: required only if above is "Other"
+    prompts:
+      medication:
+        medication_route: Please select route of administration
 
-en:
   activerecord:
     errors:
       models:
