--- a/config/locales/renalware/medications/medication.yml
+++ b/config/locales/renalware/medications/medication.yml
@@ -11,6 +11,8 @@ en:
     attributes:
       renalware/medication:
         medication_route: Route
+        start_date: "Prescribed on"
+        end_date: "Terminated on"
     errors:
       models:
         renalware/medication:
