--- a/config/locales/renalware/medications/medication.yml
+++ b/config/locales/renalware/medications/medication.yml
@@ -13,6 +13,7 @@ en:
         medication_route: Route
         start_date: "Prescribed on"
         end_date: "Terminated on"
+        frequency: "Frequency & Duration"
     errors:
       models:
         renalware/medication:
