Add Letterhead model and use in the letter form

--- a/config/locales/renalware/letters/letter.yml
+++ b/config/locales/renalware/letters/letter.yml
@@ -3,6 +3,7 @@ en:
     attributes:
       renalware/letters/letter:
         issued_on: Date
+        letterhead: Letterhead
         author: Author
         description: Description
         salutation: Salutation
