--- a/config/locales/renalware/letters/recipient.yml
+++ b/config/locales/renalware/letters/recipient.yml
@@ -2,4 +2,4 @@ en:
   activerecord:
     attributes:
       renalware/letters/recipient:
-        source_type: Recipient
+        person_role: Recipient
