Update the long format for dates

--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -34,7 +34,7 @@ en-GB:
     - Saturday
     formats:
       default: "%d-%m-%Y"
-      long: "%d %B, %Y"
+      long: "%a %e %b %Y"
       short: "%d %b"
     month_names:
     -
