Enumerize urine observations

--- a/config/locales/renalware/clinics/visit.yml
+++ b/config/locales/renalware/clinics/visit.yml
@@ -4,6 +4,15 @@ en:
       form:
         clinic_prompt: Select clinic type
 
+  enumerize:
+    renalware/clinics/clinic_visit:
+      urine_blood:
+        neg: "-"
+        trace: "+"
+      urine_protein:
+        neg: "-"
+        trace: "+"
+
   simple_form:
     hints:
       clinic_visit:
