--- a/config/locales/renalware/clinics/visit.yml
+++ b/config/locales/renalware/clinics/visit.yml
@@ -7,11 +7,19 @@ en:
   enumerize:
     renalware/clinics/clinic_visit:
       urine_blood:
-        neg: "-"
-        trace: "+"
+        neg: "Negative"
+        trace: "Trace"
+        very_low: "+"
+        low: "++"
+        medium: "+++"
+        high: "++++"
       urine_protein:
-        neg: "-"
-        trace: "+"
+        neg: "Negative"
+        trace: "Trace"
+        very_low: "+"
+        low: "++"
+        medium: "+++"
+        high: "++++"
 
   simple_form:
     hints:
